# Heroes_of_random_3

./: .gitignore  CMakeLists.txt  README.md  build.sh  debugBuild.sh
Editor/: CMakeLists.txt
Editor/include/: UnitEditor.hpp
Editor/source/: main.cpp
Game/: CMakeLists.txt
Game/include/: GameTypeSelector.hpp
Game/include/GameTypes/: Arena.hpp  BaseGameType.hpp  RandomBattles.hpp  RogueLikeYakun.hpp
Game/source/: main.cpp
General/: CMakeLists.txt
General/creator_source/: UnitEditor.hpp  UnitInspector.hpp  main.cpp
General/include/: Army.hpp  Battle.hpp  Output.hpp  Random.hpp  Tags.hpp  UnitGroup.hpp  random.hpp  units.hpp
General/include/GameTypes/: Arena.hpp  RandomBattles.hpp  RogueLikeYakun.hpp
General/include/Interaction/: ConsoleLogger.hpp  ILogger.hpp  Input.hpp  Output.hpp  TestLogger.hpp
General/include/Tags/: MassHeal.hpp  Retaliation.hpp  Slayer.hpp  TagInsides.hpp  Tags.hpp  Vampiric.hpp
General/include/Units/: Archer.hpp  BaseFactory.hpp  Knight.hpp  Swordsman.hpp  UnitCloner.hpp  UnitFactories.hpp  UnitLoader.hpp  UnitSerializer.hpp
General/source/: Army.cpp  UnitGroup.cpp  main.cpp  units.hpp
Units/: Archer.json  Cute dog.json  Dragon.json  Hobbit.json  Knight.json  Swordsmen.json  list.json
cmake/: CompilerWarnings.cmake
